Added junit test for mappers